# Duodoku

./: README.md  duodoku.cabal
app/: Main.hs
puzzles/: easy.puz  hard-solution.puz  hard.puz  medium.puz
src/: Duodoku.hs
