name:                duodoku
version:             0.1.0.0
-- synopsis:
-- description:
author:              Avigael
maintainer:          code@gaels.us
-- copyright:
-- category:
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Duodoku
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.10 && <4.13
  hs-source-dirs:      src
  default-language:    Haskell2010

executable duodoku
  main-is:             Main.hs
  hs-source-dirs:      app
  -- other-modules:
  -- other-extensions:
  build-depends:       duodoku, base >=4.10 && <4.13
  ghc-options:         -fwarn-incomplete-patterns -fwarn-tabs -fno-warn-type-defaults
  -- hs-source-dirs:
  default-language:    Haskell2010
